--- a/DIGITAL-CLOCK/WEATHER-APP/index.html
+++ b/DIGITAL-CLOCK/WEATHER-APP/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
     <link rel="stylesheet" href="style.css">
+    <!--Copyright, Publisher, Autor-->
+    <meta name="author" content="Darwin Paz">
 </head>
 <body>
 
@@ -12,6 +14,9 @@
     <div class="search">
         <input type="text" placeholder="enter city name" spellcheck="false">
         <button><img src="images/search.png"></button>
+    </div>
+    <div class="error">
+        <p>Invalid city name</p>
     </div>
 
     <div class="weather">
@@ -37,10 +42,65 @@
                     <p>Wind Speed</p>
                 </div>
             </div>
-
         </div>
     </div>
 </div>
+
+<script>
+
+// https://openweathermap.org/
+const apiKey = "ef28e0f0d86e732ce4f82d82418da2c6";
+const apiUrl = "https://api.openweathermap.org/data/2.5/weather?unit=metric&q=";
+
+const searchBox = document.querySelector(".search input");
+const searchBtn = document.querySelector(".search button");
+const weatherIcon = document.querySelector(".weather-icon");
+
+async function checkWeather(city){
+    const response = await fetch(apiUrl + city + `&appid=${apiKey}`);
+
+    if(response.status == 404){
+        document.querySelector(".error").style.display = "block";
+        document.querySelector(".weather").style.display = "none";
+    }else{
+
+        var data = await response.json();
+
+    document.querySelector(".city").innerHTML = data.name;
+    document.querySelector(".temp").innerHTML = Math.floor(data.main.temp * 1) / 10 + "°C"; // Falta calibrar temp
+    document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
+    document.querySelector(".wind").innerHTML = data.wind.speed + " km/h";
+
+    if(data.weather[0].main == "Clouds"){
+        weatherIcon.src = "images/clouds.png";
+    }
+    else if(data.weather[0].main == "Clear"){
+            weatherIcon.src = "images/clear.png";
+    }
+    else if(data.weather[0].main == "Rain"){
+            weatherIcon.src = "images/rain.png";
+    }
+    else if(data.weather[0].main == "Drizzle"){
+            weatherIcon.src = "images/drizzle.png";
+    }
+    else if(data.weather[0].main == "Mist"){
+            weatherIcon.src = "images/mist.png";
+    }
+
+    document.querySelector(".weather").style.display = "block";
+    document.querySelector(".error").style.display = "none";
+    }
+
+    
+}
+
+    searchBtn.addEventListener("click", ()=>{
+        checkWeather(searchBox.value);
+    })
+
+
+
+</script>
 
 </body>
 </html>
