--- a/DIGITAL-CLOCK/QR-GENERATOR/index.html
+++ b/DIGITAL-CLOCK/QR-GENERATOR/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Code Generator</title>
     <link rel="stylesheet" href="style.css">
+    <!--Copyright, Publisher, Autor-->
+    <meta name="author" content="Darwin Paz">
 </head>
 <body>
     <!-- https://goqr.me/api/ -->
@@ -27,8 +29,16 @@
 
 
         function generateQR() {
-            qrImage.src = "https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=" + qrText.value;
-            imgBox.classList.add("show-img");
+            if(qrText.value.length >0){
+                qrImage.src = "https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=" + qrText.value;
+                imgBox.classList.add("show-img");
+            }else{
+                qrText.classList.add('error');
+                setTimeout(()=>{
+                    qrText.classList.remove('error');
+                },1000);
+            }
+
         }
     </script>
 
