--- a/DIGITAL-CLOCK/LOGIN 2.0/index.html
+++ b/DIGITAL-CLOCK/LOGIN 2.0/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <!--Publisher, Autor-->
     <meta name="author" content="Darwin Paz">
-    <title>Document</title>
+    <title>Login 2.0</title>
 </head>
 <body>
     
