--- a/DIGITAL-CLOCK/AGE-CALCULATOR/index.html
+++ b/DIGITAL-CLOCK/AGE-CALCULATOR/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <!--Copyright, Publisher, Autor-->
+    <!--Publisher, Autor-->
     <meta name="author" content="Darwin Paz">
-    <title>Document</title>
+    <title>Age Calculator</title>
 </head>
 <body>
     
