--- a/DIGITAL-CLOCK/DARK-LIGHT-BOTTON/index.html
+++ b/DIGITAL-CLOCK/DARK-LIGHT-BOTTON/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toggle Button | Dark & Light</title>
     <link rel="stylesheet" href="style.css">
-    <!--Copyright, Publisher, Autor-->
+    <!--Publisher, Autor-->
     <meta name="author" content="Darwin Paz">
+    <title>Dark | Light</title>
 </head>
 <body>
 <input type="checkbox" id="button">
