--- a/DIGITAL-CLOCK/PASSWORD-GENERATOR/index.html
+++ b/DIGITAL-CLOCK/PASSWORD-GENERATOR/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <!--Copyright, Publisher, Autor-->
+    <!--Publisher, Autor-->
     <meta name="author" content="Darwin Paz">
     <title>Random Password Generator</title>
 </head>
