--- a/DIGITAL-CLOCK/index.html
+++ b/DIGITAL-CLOCK/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Clock</title>
     <link rel="stylesheet" href="style.css">
-    <!--Copyright, Publisher, Autor-->
+    <!--Publisher, Autor-->
     <meta name="author" content="Darwin Paz">
 </head>
 <body>
