--- a/DIGITAL-CLOCK/STOPWATCH/index.html
+++ b/DIGITAL-CLOCK/STOPWATCH/index.html
@@ -11,13 +11,57 @@
 <body>
     
 <div class="stopwatch">
-    <h1>00:00:00</h1>
+    <h1 id="displayTime">00:00:00</h1>
     <div class="buttons">
-        <img src="images/Stop.png">
-        <img src="images/Play.png">
-        <img src="images/Reload.png">
+        <img src="images/Stop.png" onclick="watchStop()">
+        <img src="images/Play.png" onclick="watchStart()">
+        <img src="images/Reload.png" onclick="watchReset()">
     </div>
 </div>
+
+<script>
+
+    let [seconds, minutes, hours] = [0,0,0];
+    let displayTime = document.getElementById("displayTime");
+    let timer = null;
+
+    function stopwatch(){
+        seconds++;
+        if(seconds == 60){
+            seconds = 0;
+            minutes++;
+            if(minutes == 60){
+                minutes = 0;
+                hours++;
+            }
+        }
+
+        let h = hours < 10 ? "0" + hours : hours;
+        let m = minutes < 10 ? "0" + minutes : minutes;
+        let s = seconds < 10 ? "0" + seconds : seconds;
+
+        displayTime.innerHTML = h +":"+ m +":"+ s;
+    }
+
+    function watchStart(){
+        if(timer!== null)
+        {
+            clearInterval(timer);
+        }
+        timer = setInterval(stopwatch,1000);
+    }
+
+    function watchStop(){
+        clearInterval(timer);
+    }
+
+    function watchReset(){
+        clearInterval(timer);
+        [seconds, minutes, hours] = [0,0,0];
+        displayTime.innerHTML = "00:00:00";
+    }
+
+</script>
 
 </body>
 </html>
