--- a/DIGITAL-CLOCK/MUSIC-PLAYER/index.html
+++ b/DIGITAL-CLOCK/MUSIC-PLAYER/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <!--Publisher, Autor-->
     <meta name="author" content="Darwin Paz">
-    <title>Document</title>
+    <title>Music Player</title>
 </head>
 <body>
     
@@ -25,8 +25,8 @@
     </nav>
 
     <img src="media/21.jpg" class="song_img">
-    <h1>Respeta Oee</h1>
-    <p>Mierda Sangrienta</p>
+    <h1>Mutilated</h1>
+    <p>Legión Subterranea</p>
 
     <audio controls id="song">
         <source src="media/modern-hard-rock.mp3" type="audio/mpeg">
